--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
                     <!--Main body-->
                     <main>
                         <div id="album-declaration" class="content">
-                            <img src="Images/Lunarile True Anomally Textless Album Cover.png" height="500" width="500">
+                            <a href="https://open.spotify.com/album/0WCO0uD9apdS2xyraNuXD8?si=kPVlMQUlRpWXkYafEwDYSg" target="_blank">
+                                <img src="Images/Lunarile True Anomally Textless Album Cover.png" height="500" width="500">
+                            </a>
                             <p class="debut-inform">Debut Album</p>
                             <img class="album-title" width="364" height="60" src="Images/True Anomaly Text.png"><br />
                             <img class="album-subtitle" width="220" height="50" src="Images/Instrumental Text.png">
-                            <p class="release-date">Out June 1st</p>
-                            <a href="https://stream.al/TrueAnomaly" target="_blank" class="pre-save-button"><img width="120" height="35" src="Images/Pre-Save Button.png"></a>
+                            <p class="release-date">Out Now</p>
                         </div>
                         <div id="album-teaser" class="content">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/we9KnZ_FvfI?si=PMhfP995dM3YQkfC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
                             <br />
-                            <a href="https://stream.al/TrueAnomaly" target="_blank" class="pre-save-button"><img width="120" height="35" src="Images/Pre-Save Button.png"></a>
-                            <!-- <a href="https://lnkfi.re/TrueAnomalyInstrumental" target="_blank" class="Listen Now"><img width="120" height="35" src="Images/Listen Now Button.png"></a> -->
+                            <a href="https://lnkfi.re/TrueAnomalyInstrumental" target="_blank" class="Listen Now"><img width="120" height="35" src="Images/Listen Now Button.png"></a>
                         </div>
                     </main>
                 </div>
@@ -66,17 +66,12 @@
                             <a href="https://www.youtube.com/@LunarilleBand" target="_blank">
                                 <img id="youtube-icon" class="social-media-icon" width="20" height="20" src="Images/SVG/youtube-app-white-icon.svg"></img>
                             </a>
-                                <!--Add Spotify Link and svg later-->
-                        <!--<a href="" target="_blank"> -->
-                                <!-- <img id="soptify-icon" class="social-media-icon" width="20" height="20" src="Images/SVG/spotify-white-icon.svg"></img>
-                            </a> -->
-                                <!--Remove above comments and add urls when content is live-->
-
-                                <!--Add Apple Music Link and svg later-->
-                        <!--<a href="" target="_blank"> -->
-                                <!-- <img id="apple-music-icon" class="social-media-icon" width="20" height="20" src="Images/SVG/Apple_Music_Icon_wht_sm_073120.svg"></img> 
-                            </a> -->
-                                <!--Remove above comments and add urls when content is live-->
+                            <a href="https://open.spotify.com/album/0WCO0uD9apdS2xyraNuXD8?si=kPVlMQUlRpWXkYafEwDYSg" target="_blank">
+                                <img id="spotify-icon" class="social-media-icon" width="20" height="20" src="Images/SVG/spotify-white-icon.svg"></img>
+                            </a>
+                            <a href="https://music.apple.com/us/album/true-anomaly-instrumental/1746480372" target="_blank">
+                                <img id="apple-music-icon" class="social-media-icon" width="20" height="20" src="Images/SVG/Apple_Music_Icon_wht_sm_073120.svg"></img> 
+                            </a>
                         </div>
                     </nav>
                     <p class="copyright-declaration">Copyright<span>&#169</span>2024 Lunarille</p>
