--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             </div>
                         </nav>
                         <!--End of Navbar-->
-                        <a class="header-logo" href="./Lunarille Home.html"><img width="340" height="130" src="Images/Lunarille Text Logo.png"></a>
+                        <a class="header-logo" href="./index.html"><img width="340" height="130" src="Images/Lunarille Text Logo.png"></a>
                     </header>
                     <!--Main body-->
                     <main>
