--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,12 @@
                             </div>
                             <div class="nav-bar" id="nav-bar">
                                 <ul>
-                                    <li><a href="./Lunarille Home.html" class="nav-link">Home</a></li>
-                                    <li><a href="./Music.html" class="nav-link">Music</a></li>
+                                    <li><a href="./index.html" class="nav-link">Home</a></li>
+                                    <li><a href="./music.html" class="nav-link">Music</a></li>
                                 </ul>
                             </div>
                     </nav>
-                        <a class="header-logo" href="./Lunarille Home.html"><img width="340" height="130" src="Images/Lunarille Text Logo.png"></a>
+                        <a class="header-logo" href="./index.html"><img width="340" height="130" src="Images/Lunarille Text Logo.png"></a>
                     </header>
                     <!--Main body-->
                     <main>
