--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <meta charset="UTF-8">
-            <meta name="description" content="Lunarille's official site. Debut Album, 'True Anomaly (Instrumental) out June 1st.">
+            <meta name="description" content="Lunarille's official site. Debut Album, 'True Anomaly (Instrumental) out Now.">
             <meta name="author" content="S. Diony Kerr and Lunarille">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Lunarille | Official Site</title>
@@ -27,8 +27,8 @@
                             </div>
                             <div class="nav-bar" id="nav-bar">
                                 <ul>
-                                    <li><a href="./Music.html" class="nav-link">Music</a></li>
-                                    <li><a href="./Contact.html" class="nav-link">Contact</a></li>
+                                    <li><a href="./music.html" class="nav-link">Music</a></li>
+                                    <li><a href="./contact.html" class="nav-link">Contact</a></li>
                                 </ul>
                             </div>
                         </nav>
