--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <meta charset="UTF-8">
-            <meta name="description" content="Lunarille's official site. Debut Album, 'True Anomaly (Instrumental) out June 1st.">
+            <meta name="description" content="Lunarille's official site. Debut Album, 'True Anomaly (Instrumental)' Out Now.">
             <meta name="author" content="S. Diony Kerr and Lunarille">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Lunarille | Contact</title>
