Update contact.html email

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                     <!--Main body-->
                     <main>
                         <p id="indv-nav-header">Get in Touch:</p>
-                        <p class="contact-email">lunarilleband@gmail.com</p>
+                        <p class="contact-email">lunarille.band@gmail.com</p>
                     </main>
                 </div>
                 <footer id="footer">
