Update contact, adding social links to footer.html

--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,26 @@
                     </main>
                 </div>
                 <footer id="footer">
+                    <nav class="social-links-nav">
+                        <div>
+                            <p class="get-in-touch">Follow us on:</p>
+                            <a href="https://www.instagram.com/lunarilleband/" target="_blank">
+                                <img id="instagram-icon" class="social-media-icon" width="20" height="20" src="Images/SVG/instagram-white-icon.svg"></img>
+                            </a>
+                            <a href="https://twitter.com/lunarille" target="_blank">
+                                <img id="twitter-icon" class="social-media-icon" width="20" height="20" src="Images/SVG/twitter-white-icon.svg"></img>
+                            </a>
+                            <a href="https://www.youtube.com/@LunarilleBand" target="_blank">
+                                <img id="youtube-icon" class="social-media-icon" width="20" height="20" src="Images/SVG/youtube-app-white-icon.svg"></img>
+                            </a>
+                            <a href="https://open.spotify.com/album/0WCO0uD9apdS2xyraNuXD8?si=kPVlMQUlRpWXkYafEwDYSg" target="_blank">
+                                <img id="spotify-icon" class="social-media-icon" width="20" height="20" src="Images/SVG/spotify-white-icon.svg"></img>
+                            </a>
+                            <a href="https://music.apple.com/us/album/true-anomaly-instrumental/1746480372" target="_blank">
+                                <img id="apple-music-icon" class="social-media-icon" width="20" height="20" src="Images/SVG/Apple_Music_Icon_wht_sm_073120.svg"></img> 
+                            </a>
+                        </div>
+                    </nav>
                     <p class="copyright-declaration">Copyright<span>&#169</span>2024 Lunarille</p>
                 </footer>
             </div>
